tests/ui/pattern/issue-52240.stderr
error[E0596]: cannot borrow data in a `&` reference as mutable
  --> $DIR/issue-52240.rs:9:27
   |
LL |     if let (Some(Foo::Bar(ref mut val)), _) = (&arr.get(0), 0) {
   |                           ^^^^^^^^^^^ cannot borrow as mutable
   |
   = help: `ref mut val` is of type `&Foo`, which is an immutable reference

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
